# climate-almanac

./: AGENTS.md  README.md  almanac.config.yml  catalog.json  pyproject.toml  requirements-headless.txt
.github/: CODEOWNERS
.github/workflows/: link-check.yml
catalog/: berkeley-earth-temperature.yaml  copernicus-era5-reanalysis.yaml  cpc-long-range-outlooks.yaml  metoffice-hadcrut5.yaml  nasa-gistemp.yaml  nasa-grace-land-mascons.yaml  ncei-climate-data-online.yaml  ncei-global-ocean-heat-content.yaml  ncei-storm-events-database.yaml  noaa-billion-dollar-disasters.yaml  noaa-climate-at-a-glance.yaml  noaa-ghcn-daily.yaml  noaa-gml-co2-trends.yaml  nsidc-north-american-snow-cover.yaml  nsidc-sea-ice-index.yaml  us-drought-monitor.yaml  usgs-nwis-water-data.yaml
docs/: STEWARDING.md
schema/: catalog-entry.schema.json
scripts/: alert_on_dead_links.py  build_index.py  check_links.py  migrate_v1_v2.py
tests/: test_catalog.py
