[project]
name = "almanac-template"
version = "0.1.0"
description = "A template for building a self-monitoring catalog of public data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.0", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["ruff", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py311"
extend-exclude = [".venv", ".venv-dev", "__pycache__"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
